# code-context

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yaml  package.json
.github/workflows/: api-release.yml  cli-release.yml
api/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
api/src/: app.py  config.py  index.ts  main.py
api/src/models/: __init__.py  index.py  search.py
api/src/routes/: index.py  search.py
api/src/routes/index/: index.ts
cli/: .editorconfig  .gitignore  Cargo.toml  README.md  go.mod  main.go  pyproject.toml
cli/cmd/: index.go  reindex.go  root.go  search.go  search_cwd.go  unindex.go
cli/internal/format/: search.go
cli/internal/http/: client.go
cli/internal/path/: path.go
cli/src/: config.py  main.py  main.rs  service_factory.py
cli/src/cli/: commands.rs  main.py  service_factory.py
cli/src/cli/commands/: __init__.py  drop.py  index.py  init.py  mcp.py  search.py
cli/src/client/: http.rs
cli/src/commands/: __init__.py  drop.py  index.py  init.py  mcp.py  search.py
cli/src/format/: search.rs
cli/src/types/: api.rs
cli/src/utils/: path.rs
core/: .gitignore  README.md  pyproject.toml  summary.xml
core/examples/: tree_sitter_graph.py
core/src/core/: __init__.py  context.py  indexing_service.py  search_service.py  utils.py
core/src/core/graph/: __init__.py  builder.py  factory.py  types.py
core/src/core/graph/builders/: __init__.py  default.py  protocol.py  python.py  ref_constants.py  types.py
core/src/core/qdrant/: __init__.py  client.py  explainer_service.py  types.py
core/src/core/services/: __init__.py  constants.py  indexing_service.py  search_service.py
core/src/core/services/utils/: __init__.py  collection_name.py  embedding_service.py  explainer_service.py  graph_service.py
core/src/core/splitters/: __init__.py  base.py  ids.py  tree_sitter.py  types.py  utils.py
core/src/core/sync/: __init__.py  comparator.py  files.py  hash_utils.py  io.py  merkle.py  scanner.py  types.py  util.py
core/src/core/sync/content_readers/: __init__.py  local.py  protocol.py
core/src/core/sync/file_listing/: __init__.py  local.py  protocol.py
core/src/core/sync/state/: __init__.py  local.py  repository.py
core/tests/: index.py
src/: context.ts  index.ts  logger.ts
src/routes/: clear.ts  config.ts  index.ts  reindex.ts  search.ts
src/routes/config/: index.ts
src/routes/ignored/: add.ts  index.ts  list.ts  remove.ts
src/routes/index/: index.ts
src/routes/search/: index.ts
src/services/: config.service.ts  ignored-files.service.ts
