[project]
name = "cli"
version = "0.1.0"
description = "Semantic code search CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.2.1",
    "rich>=14.2.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.11.0",
    "core",
]

[tool.pyright]
exclude = ["**/node_modules", ".venv"]
include = ["./src/"]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.uv.sources]
core = { path = "../core" }

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
]
